<resources>
    <string name="app_name">iRunSeoul</string>
    <string name="title_event_detail">event Detail</string>
    <string name="application_period">Application Period</string>
    <string name="weather">Weather Forecast</string>
    <string name="race_date">Date</string>
    <string name="contact_number">Call</string>
    <string name="website">Website</string>
    <string name="daum_map">Daum Map</string>
    <string name="login_strava">Strava Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="getting_started">Get Started</string>
    <string name="already_member">Already a member? Log in</string>
    <string name="title_activity_marathon_list">MarathonListActivity</string>
    <string name="title_home">Recent</string>
    <string name="title_dashboard">My runs</string>
    <string name="title_profile">Profile</string>
    <string name="getting_started_page_text">Sync your run record from your favorite running app with corresponding Marathon!</string>
    <string name="dummy_marathon_name">Seoul International Marathon - Donga Ilbo blah blah</string>

    <string name="unknown_response">Unexpected onActivityResult response code</string>
    <string name="unknown_sign_in_response">Unknown response from AuthUI sign-in</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="signed_in_header">You are signed in!</string>
    <string name="sign_out">Sign out</string>
    <string name="unknown_error">An unknown error occurred</string>
    <string name="sign_out_failed">Sign out failed</string>
    <string name="run_synced">Congrats! Run synced</string>
    <string name="app_perioid">Application period : %s</string>
    <string name="predict_weather">Predicted Weather : %s</string>
    <string name="stats">STATS</string>
    <string name="marathon">My \n Marathons</string>
    <string name="marathon_number">2</string>
    <string name="marathon_year">in 2017</string>
    <string name="marathon_upcoming_year">Upcoming Marathons in 2017</string>
    <string name="marathon_events_2017">Marathon Events 2017</string>
    <string name="my_marathon_events">My Marathon events</string>
    <string name="my_profile">My Profile</string>

    <string name="running">Running</string>
    <string name="dummy_date">2017/03/19 08:00</string>
    <string name="dummy_elapsed_time">1:05:45</string>
    <string name="dummy_distance">5.01 KM</string>
    <string name="dumy_city">Seoul</string>
    <string name="dummy_speed">8.5 KM/H</string>
    <string name="title_activity_single_event">Event</string>
    <string name="dummy_app_perioid">Application period : 2016/7/1 - 2016/11/28</string>
    <string name="dummy_weather">Predicted Weather : 2.9C</string>
    <string name="dummy_temp">2.9C</string>
    <string name="dummy_name">John Doe</string>


    <string name="processing">Processing..</string>
    <string name="fetching_data">Fetching data..</string>
    <string name="already_added">Activity already added!</string>
    <string name="error_user_fetch">Error: could not fetch user.</string>
    <string name="logout">Logout</string>
    <string name="title_activity_single_run">SingleRunActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>
