<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.irunseoul.android.app.activities.SingleEventActivity"
    android:background="@color/black"
    android:alpha="0.7"
    android:orientation="vertical"
    tools:showIn="@layout/activity_single_event">




    <TextView
        android:layout_width="match_parent"
        android:padding="@dimen/text_margin"
        android:layout_height="wrap_content"
        android:text="@string/dummy_marathon_name"
        android:textAppearance="@style/RunTheme.Title"
        android:id="@+id/event_title" />


  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/dummy_date"
      android:textAppearance="@style/RunTheme.text.date"
      android:layout_marginTop="4dp"
      android:id="@+id/eventDate"
      tools:layout_constraintLeft_creator="1"
      app:layout_constraintLeft_toLeftOf="@+id/event_title"
      android:layout_marginStart="16dp" />

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="194dp"
        class="com.google.android.gms.maps.MapFragment"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/eventDate"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/eventLocation"
        android:layout_height="wrap_content"
        android:text="@string/dummy_location"
        android:layout_marginTop="10dp"
        android:layout_marginStart="16dp"
        android:textAppearance="@style/RunTheme.Secondary.Title" />


    <TextView
        android:id="@+id/appPeriod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textAppearance="@style/RunTheme.Secondary.Title"
        android:text="@string/dummy_app_perioid"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp" />


    <TextView
        android:id="@+id/eventTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_weather"
        android:textAppearance="@style/RunTheme.Secondary.Title"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/appPeriod"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/eventWebsite"
            android:layout_width="120dp"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_height="36dp"
            android:paddingStart="@dimen/text_margin"
            android:text="@string/website"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:paddingEnd="@dimen/text_margin"/>

        <Button
            android:layout_width="120dp"
            android:text="@string/daum_map"
            android:id="@+id/eventMapUrl"
            android:textColor="@color/white"
            android:background="@color/colorPrimary"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin"
            android:layout_height="36dp" />


    </LinearLayout>


    <com.sweetzpot.stravazpot.authenticaton.ui.StravaLoginButton
        android:id="@+id/strava_login_button"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_gravity="center"
        app:type="orange"
        android:layout_marginTop="12dp" />
    </LinearLayout>

</LinearLayout>
