<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:elevation="10dp"
        >

        <ImageView
            android:id="@+id/runImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:alpha="1.2"
            android:src="@drawable/run_background_1jpg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/icon_margin"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginStart="@dimen/icon_margin"
                android:tint="@color/white"
                android:src="@drawable/ic_directions_run_black_48dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/RunTheme.Subtitle"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/text_margin_list_item"
                android:text="@string/running"/>


            <TextView
                android:id="@+id/eventDate"
                android:textAppearance="@style/RunTheme.Subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_marginEnd="@dimen/icon_margin"
                android:layout_gravity="center_vertical"
                android:text="@string/dummy_date"/>

        </LinearLayout>
        <TextView
            android:id="@+id/eventTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/text_margin"
            android:text="@string/dummy_marathon_name"
            android:lines="2"
            android:gravity="center_horizontal|center_vertical"
            android:padding="@dimen/title_padding"
            android:maxLines="1"
            android:ellipsize="end"
            android:textAppearance="@style/RunTheme.Title"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_gravity="bottom"
            android:gravity="center_horizontal"
            android:layout_marginStart="@dimen/text_margin"
            android:layout_marginEnd="@dimen/text_margin"
            android:layout_marginBottom="32dp"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/linearlayout_list_margin">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:tint="@color/white"
                    android:src="@drawable/elapsed_time_black_48dp"/>

                <TextView
                    android:id="@+id/runElapsedTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_list_item"
                    android:textAppearance="@style/RunTheme.MyRun.Stats"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dummy_elapsed_time"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginEnd="@dimen/linearlayout_list_margin">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:tint="@color/white"
                    android:src="@drawable/ic_road_variant_white_48dp"/>

                <TextView
                    android:id="@+id/runDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_list_item"
                    android:textAppearance="@style/RunTheme.Subtitle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dummy_distance"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/icon_size"
                    android:layout_height="@dimen/icon_size"
                    android:tint="@color/white"
                    android:src="@drawable/pace_black_48dp"/>

                <TextView
                    android:id="@+id/runPace"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/text_margin_list_item"
                    android:textAppearance="@style/RunTheme.Subtitle"
                    android:layout_gravity="center_vertical"
                    android:text="@string/dummy_speed"/>

            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/text_margin_list_item"
            android:layout_gravity="bottom|center_horizontal"
            android:src="@drawable/api_logo_strava"/>


    </android.support.v7.widget.CardView>
</LinearLayout>